<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.transfer.TransferFragment">

    <View
        android:id="@+id/topPanel"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/purple_500"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/addressText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/transfer_money"
        android:textColor="@color/black"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="@id/topPanel"
        app:layout_constraintEnd_toEndOf="@id/topPanel"
        app:layout_constraintTop_toTopOf="@id/topPanel"
        app:layout_constraintBottom_toBottomOf="@id/topPanel"/>

    <TextView
        android:id="@+id/balanceText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text=""
        android:textSize="34sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginEnd="75dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topPanel"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eth"
        android:textStyle="bold"
        android:textSize="38sp"
        android:textColor="@color/black"
        android:layout_marginStart="2dp"
        app:layout_constraintStart_toEndOf="@id/balanceText"
        app:layout_constraintTop_toTopOf="@id/balanceText"
        app:layout_constraintBottom_toBottomOf="@id/balanceText"/>




    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/addressLayout"
        android:layout_width="290dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="100dp">

        <EditText
            android:id="@+id/recipientAddressInput"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/white"
            android:inputType="text"
            android:autofillHints="Address"
            android:gravity="center"
            android:hint="@string/enter_the_recipient_address"
            android:paddingStart="0dp"
            android:paddingEnd="0dp"
            android:singleLine="true"
            android:textSize="18sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/sumLayout"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        app:layout_constraintEnd_toEndOf="@+id/addressLayout"
        app:layout_constraintStart_toStartOf="@+id/addressLayout"
        app:layout_constraintTop_toBottomOf="@+id/addressLayout">

        <EditText
            android:id="@+id/amountOfMoneyText"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:autofillHints="Address"
            android:background="@color/white"
            android:hint="@string/input_sum_of_money_in_eth"
            android:inputType="numberDecimal"
            android:paddingStart="0dp"
            android:paddingEnd="0dp"
            android:singleLine="true"
            android:textSize="18sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/sendImage"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:srcCompat="@drawable/arrow_circle"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@id/sumLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/qrcodeScanImage"
        android:layout_width="75dp"
        android:layout_height="75dp"
        app:srcCompat="@drawable/qrcode_scan"
        app:layout_constraintTop_toBottomOf="@id/sendImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>