<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/swipeRefresh"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.main.MainFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <View
                android:id="@+id/topPanel"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/purple_500"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/addressText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@id/topPanel"
                app:layout_constraintEnd_toEndOf="@id/topPanel"
                app:layout_constraintTop_toTopOf="@id/topPanel"
                app:layout_constraintBottom_toBottomOf="@id/topPanel"/>

            <ImageView
                android:id="@+id/copyAddressImage"
                android:layout_width="18dp"
                android:layout_height="18dp"
                app:layout_constraintStart_toEndOf="@id/addressText"
                app:layout_constraintTop_toTopOf="@id/addressText"
                app:layout_constraintBottom_toBottomOf="@id/addressText"
                android:src="@drawable/content_copy"/>

            <TextView
                android:id="@+id/balanceText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="34sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_marginBottom="125dp"
                android:layout_marginEnd="75dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/topPanel"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eth"
                android:textStyle="bold"
                android:textSize="38sp"
                android:textColor="@color/black"
                android:layout_marginStart="2dp"
                app:layout_constraintStart_toEndOf="@id/balanceText"
                app:layout_constraintTop_toTopOf="@id/balanceText"
                app:layout_constraintBottom_toBottomOf="@id/balanceText"/>

            <ImageView
                android:id="@+id/sendImage"
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:srcCompat="@drawable/arrow_circle"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="80dp"
                app:layout_constraintTop_toBottomOf="@id/balanceText"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/purple_500"
                android:textSize="18sp"
                android:text="@string/send"
                app:layout_constraintTop_toBottomOf="@id/sendImage"
                app:layout_constraintStart_toStartOf="@id/sendImage"
                app:layout_constraintEnd_toEndOf="@id/sendImage"/>

            <ImageView
                android:id="@+id/settingsImage"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="40dp"
                app:srcCompat="@drawable/settings"
                app:layout_constraintTop_toTopOf="@id/sendImage"
                app:layout_constraintStart_toEndOf="@id/sendImage"
                app:layout_constraintBottom_toBottomOf="@id/sendImage"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/purple_500"
                android:textSize="18sp"
                android:text="@string/settings"
                app:layout_constraintTop_toBottomOf="@id/settingsImage"
                app:layout_constraintStart_toStartOf="@id/settingsImage"
                app:layout_constraintEnd_toEndOf="@id/settingsImage"/>
        </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

